@@ -2228,4 +2228,9 @@ PiecesView.BlockView.Header=%1 column(s), %2 row(s), %3 pieces
 
 ConfigView.section.update.autodownload=Auto download updates and prompt when installation is ready
 
+Peers.column.peer_id=Peer ID
+Peers.column.peer_id.info=Peer ID in readable form
+Peers.column.peer_byte_id=Peer ID
+Peers.column.peer_byte_id.info=Peer ID in byte form
+
 #PLEASE LEAVE ME AT VERY BOTTOM!
