@@ -10,6 +10,7 @@ FEATURE: Core | Per-category upload/download speed limits [Parg]
 FEATURE: Core | Per-torrent super-seeding via MyTorrents context menu [Parg]
 FEATURE: UI   | Option to auto-download and install updates [TuxPaper]
 FEATURE: UI   | Overall piece map for Piece View [TuxPaper]
+FEATURE: UI   | New "Peer ID" columns in the Peers View [amc1]
 FEATURE: Plug | Plugins can now add their own status indicators on the status bar [amc1]
 FEATURE: Plug | Plugins can now add menu items to the system tray, download bars, menu bar [amc1]
 
